force-app/main/default/objects/ULBC_Email_Send_Recipient__c/ULBC_Email_Send_Recipient__c.object-meta.xml
<CustomObject>
    <description>One row per recipient per send. Master-detail to ULBC_Email_Send__c so roll-up summary fields aggregate open/click counts. ULBC_Trust_ID__c is denormalised from Contact at materialisation so the row survives Contact merges and joins cleanly to Stripe/Xero data.</description>
    <label>ULBC Email Send Recipient</label>
    <nameField>
        <displayFormat>EMR-{000000}</displayFormat>
        <label>Recipient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ULBC Email Send Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>