force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Click_Count__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Click_Count__c</fullName>
    <description>Total click events aggregated for this recipient.</description>
    <label>Click Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>