force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Contact__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Contact__c</fullName>
    <description>Contact this row was sent to. Lookup (not master-detail) so a Contact deletion does not cascade-delete historical send recipients — donor erasure is handled by anonymising fields, not deleting audit rows.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Send Recipients</relationshipLabel>
    <relationshipName>ULBC_Email_Send_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>