force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Email_Address__c</fullName>
    <description>Snapshot of the address used for delivery. Captured at materialisation so a later edit to Contact.Email does not rewrite history.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>