force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Email_Send__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Email_Send__c</fullName>
    <description>Master-detail to the parent send. reparentableMasterDetail=false so a recipient cannot be moved between sends after creation — preserves audit integrity. writeRequiresMasterRead=true so anyone reporting on Send sees their recipients consistently.</description>
    <label>Email Send</label>
    <referenceTo>ULBC_Email_Send__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>