force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_First_Click_At__c.field-meta.xml
<CustomField>
    <fullName>ULBC_First_Click_At__c</fullName>
    <description>Earliest Occurred_At from a non-aggregated click event. Set once and never overwritten. Click rate is the most honest engagement signal.</description>
    <label>First Click At</label>
    <type>DateTime</type>
</CustomField>