force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_First_Open_At__c.field-meta.xml
<CustomField>
    <fullName>ULBC_First_Open_At__c</fullName>
    <description>Earliest Occurred_At from a non-aggregated open event. Set once by ULBC_EmailEventAggregator and never overwritten. Null until first open.</description>
    <label>First Open At</label>
    <type>DateTime</type>
</CustomField>