force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Last_Click_URL__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Last_Click_URL__c</fullName>
    <description>Most recently clicked destination URL. Useful for spot-checking which CTA an engaged donor responded to without joining to ULBC_Email_Event__c.</description>
    <label>Last Click URL</label>
    <type>Url</type>
</CustomField>