force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Open_Count__c</fullName>
    <description>Total open events aggregated for this recipient. Inflated by Apple Mail Privacy Protection and Gmail image proxying — anchor reporting on click rate, not opens.</description>
    <label>Open Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>