force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Status__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Status__c</fullName>
    <description>Per-recipient outcome. Pending = materialised but not yet sent. Sent = SingleEmailMessage accepted. Bounced = post-send bounce notification (v2). Suppressed = excluded by resolver before send (opt-out, missing email, bounced previously). Failed = SingleEmailMessage threw an EmailException.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Suppressed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>