force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Suppression_Reason__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Suppression_Reason__c</fullName>
    <description>Why this recipient was Suppressed or Failed. Populated by ULBC_EmailRecipientResolver (for Suppressed) or by ULBC_EmailSendQueueable (for Failed). Null otherwise.</description>
    <label>Suppression Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OptedOut</fullName>
                <label>Opted Out</label>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>MissingEmail</fullName>
                <label>Missing Email</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>SendException</fullName>
                <label>Send Exception</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>