force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Token__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>URL-safe random opaque token embedded in pixel + click + unsub URLs. Maps a tracking ping back to this row. Unique + External ID gives O(1) SOQL lookup from ULBC_EmailTrackingResource. Generated by ULBC_EmailTokenService.generate().</description>
    <externalId>true</externalId>
    <label>Token</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>