force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Trust_ID__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Trust_ID__c</fullName>
    <description>Denormalised copy of Contact.ULBC_Trust_ID__c at materialisation. Survives Contact merges/deletes and is the cross-system join key into Stripe (donations, dinner tickets) and Xero (Phase 6). Not unique here — the same Trust ID may appear across many sends.</description>
    <externalId>true</externalId>
    <label>Trust ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>