force-app/main/default/objects/ULBC_Email_Send_Recipient__c/fields/ULBC_Unsubscribed_At__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Unsubscribed_At__c</fullName>
    <description>Datetime the recipient hit the unsubscribe link from this specific send. Set in addition to Contact.HasOptedOutOfEmail so we can attribute opt-outs to the send that triggered them — useful for content-quality reporting.</description>
    <label>Unsubscribed At</label>
    <type>DateTime</type>
</CustomField>